--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         <script>
           document.write(new Date().getFullYear())
         </script>
-        michalosman
+        reelbatuhaan
       </p>
-      <a href="https://github.com/michalosman" target="_blank">
+      <a href="https://github.com/batuhanarioz" target="_blank">
         <i class="fab fa-github"></i
       ></a>
     </footer>
